# smaji_glyph_outline

./: README.md  glyph_outline.opam  smaji_glyph_path.opam
src/: bezier.ml  bezier.mli  dune  glyph_outline.ml  outline.ml  outline.mli  path.ml  path.mli  point.ml  point.mli  smaji_glyph_outline.ml  smaji_glyph_outline.mli  smaji_glyph_path.ml  smaji_glyph_path.mli
src/glif/: glif.ml  glif.mli
src/svg/: path.ml  path.mli  svg.ml  svg.mli  svg_path.ml  svg_path.mli  viewBox.ml  viewBox.mli
src/utils/: utils.ml
test/: a.xml  dune  test.ml
